# CrewAI-Agents-MinutesOfMeeting-Gmail

./: README.md
minutes_of_meeting/: Terminal_Output.txt  crewai_flow.html  pyproject.toml
minutes_of_meeting/meeting_minutes/: action_items.txt  summary.txt
minutes_of_meeting/src/minutes_of_meeting/: main.py
minutes_of_meeting/src/minutes_of_meeting/crews/gmail_crew/: gmail_crew.py
minutes_of_meeting/src/minutes_of_meeting/crews/gmail_crew/config/: agents.yaml  tasks.yaml
minutes_of_meeting/src/minutes_of_meeting/crews/gmail_crew/tools/: credentials.json  gmail_tool.py  gmail_util.py  token.json
minutes_of_meeting/src/minutes_of_meeting/crews/minutesofmeeting_crew/: minutesofmeeting_crew.py
minutes_of_meeting/src/minutes_of_meeting/crews/minutesofmeeting_crew/config/: agents.yaml  tasks.yaml
