[project]
name = "minutes_of_meeting"
version = "0.1.0"
description = "minutes-of-meeting using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
]

[project.scripts]
kickoff = "minutes_of_meeting.main:kickoff"
plot = "minutes_of_meeting.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
